--- a/greetings.html
+++ b/greetings.html
@@ -79,13 +79,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Selamat_pagi.mp3');">
+										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1faCImhGf7g.mp3">
 										<figcaption style="font-weight:bold;">Selamat Pagi </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Guten_Morgen.mp3');">
+										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s11v49PSVKqZ.mp3">
 										<figcaption style="font-weight:bold;">Guten Morgen</figcaption>
 									</figure>
 								</div>
@@ -101,13 +101,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Selamat_Sore.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1Sn93ykezRV.mp3">
 										<figcaption style="font-weight:bold;">Selamat Sore </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Guten_Abend.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1d1hsfROWpG.mp3">
 										<figcaption style="font-weight:bold;">Guten Abend</figcaption>
 									</figure>
 								</div>
@@ -123,13 +123,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Selamat_malam.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1NIPA264nTq.mp3">
 										<figcaption style="font-weight:bold;">Selamat Malam  </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Gute_Nacht.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1MxWDn04oLD.mp3">
 										<figcaption style="font-weight:bold;">Gute Nacht</figcaption>
 									</figure>
 								</div>
@@ -145,13 +145,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Sampai_Jumpa.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1BUr5CKKaav.mp3">
 										<figcaption style="font-weight:bold;">Sampai Jumpa </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Auf_Wiedersehen.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1DEAjLCJvWH.mp3">
 										<figcaption style="font-weight:bold;">Auf Wiedersehen</figcaption>
 									</figure>
 								</div>
@@ -167,13 +167,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Terima_kasih.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1zxsaD1Cllo.mp3">
 										<figcaption style="font-weight:bold;">Terima kasih </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Danke.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1YNZfHz0NWi.mp3">
 										<figcaption style="font-weight:bold;">Danke</figcaption>
 									</figure>
 								</div>
@@ -189,13 +189,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Maaf.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1icfciMnhD4.mp3">
 										<figcaption style="font-weight:bold;">Maaf  </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Es_Tut_mir_leid.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1zcgW6ZzBWf.mp3">
 										<figcaption style="font-weight:bold;">Es Tut mir leid</figcaption>
 									</figure>
 								</div>
