--- a/kamus2.html
+++ b/kamus2.html
@@ -79,13 +79,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/ayam.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s10Wjs66KELC.mp3">
   										<figcaption style="font-weight:bold;">Ayam</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/huhn.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s10Wjs66KELC.mp3">
   										<figcaption style="font-weight:bold;">Hunn</figcaption>
   									</figure>
   								</div>
@@ -107,7 +107,7 @@
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/ente.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1r9F7x4xCiC.mp3">
   										<figcaption style="font-weight:bold;">Ente</figcaption>
   									</figure>
   								</div>
@@ -123,13 +123,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/burung.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1TbRboDVQaa.mp3">
   										<figcaption style="font-weight:bold;">Burung</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/vogel.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1tRhOFYY7iW.mp3">
   										<figcaption style="font-weight:bold;">Vogel</figcaption>
   									</figure>
   								</div>
@@ -145,13 +145,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/gajah.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1e7WslMUzwj.mp3">
   										<figcaption style="font-weight:bold;">Gajah</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/elefant.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1evBjUyZicL.mp3">
   										<figcaption style="font-weight:bold;">Elefant</figcaption>
   									</figure>
   								</div>
@@ -167,13 +167,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/harimau.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1kKuO3mFuy0.mp3">
   										<figcaption style="font-weight:bold;">Harimau</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/tiger.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1usX9JUpQNg.mp3">
   										<figcaption style="font-weight:bold;">Tiger</figcaption>
   									</figure>
   								</div>
