--- a/kamus3.html
+++ b/kamus3.html
@@ -79,13 +79,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/alpukat.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1fROnP7QbBM.mp3">
   										<figcaption style="font-weight:bold;">Alpukat</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/avocado.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s16N8JN3CSg3.mp3">
   										<figcaption style="font-weight:bold;">Avocado</figcaption>
   									</figure>
   								</div>
@@ -101,13 +101,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/anggur.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1UaAGQf6wM3.mp3">
   										<figcaption style="font-weight:bold;">Anggur</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/trauben.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1UaAGQf6wM3.mp3">
   										<figcaption style="font-weight:bold;">Trauben</figcaption>
   									</figure>
   								</div>
@@ -123,13 +123,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/apel.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1uY9GKlHsVn.mp3">
   										<figcaption style="font-weight:bold;">Apel</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/apfel.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1nLiYe3NAaK.mp3">
   										<figcaption style="font-weight:bold;">Apfel</figcaption>
   									</figure>
   								</div>
@@ -145,13 +145,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/belimbing.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1waKjGwGIse.mp3">
   										<figcaption style="font-weight:bold;">Belimbing</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/strenfruncht.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1e5EP6PQnKY.mp3">
   										<figcaption style="font-weight:bold;">Strenfruncht</figcaption>
   									</figure>
   								</div>
@@ -167,13 +167,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/durian.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s13mqi0EUo0L.mp3">
   										<figcaption style="font-weight:bold;">Durian</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/durianfruncht.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1YF7eHEzxCW.mp3">
   										<figcaption style="font-weight:bold;">Durianfruncht</figcaption>
   									</figure>
   								</div>
