--- a/kamus5.html
+++ b/kamus5.html
@@ -79,13 +79,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/1/a.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0cRdf44ViC3.mp3">
   										<figcaption style="font-weight:bold;">A</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/2/ein.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1QsAnBjZHT9.mp3">
   										<figcaption style="font-weight:bold;">Ein</figcaption>
   									</figure>
   								</div>
@@ -101,13 +101,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/1/b.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0gniAlC1SRf.mp3">
   										<figcaption style="font-weight:bold;">B</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/2/b.mp3');">
+  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ayKX4g82zj.mp3">
   										<figcaption style="font-weight:bold;">B</figcaption>
   									</figure>
   								</div>
@@ -123,13 +123,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/1/c.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0UvNEcp0uF9.mp3">
   										<figcaption style="font-weight:bold;">C</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/2/c.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s05kLbW7RBd8.mp3">
   										<figcaption style="font-weight:bold;">C</figcaption>
   									</figure>
   								</div>
@@ -145,13 +145,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/1/d.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0uzGnIV6CQQ.mp3">
   										<figcaption style="font-weight:bold;">D</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/2/d.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0kDQVvZE8ag.mp3">
   										<figcaption style="font-weight:bold;">D</figcaption>
   									</figure>
   								</div>
@@ -167,13 +167,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/1/e.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0hHXPiinnKj.mp3">
   										<figcaption style="font-weight:bold;">E</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/abjad/2/e.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0EYQbUQLmBF.mp3">
   										<figcaption style="font-weight:bold;">E</figcaption>
   									</figure>
   								</div>
